--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: ai_chat_plus
-description: "A new Flutter package project."
+description: "A Flutter package that provides AI chat functionality with enhanced features and customization options."
 version: 0.0.1
-homepage:
+homepage: https://github.com/yourusername/ai_chat_plus
+repository: https://github.com/yourusername/ai_chat_plus
 
 environment:
   sdk: ^3.5.3
@@ -10,6 +11,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.2.0
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
