--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ai_chat_plus
-description: "A Flutter package that provides AI chat functionality with enhanced features and customization options."
+description: "A Flutter package that provides AI chat functionality with enhanced features including OpenAI, Google Gemini, and Claude AI integrations, voice recognition, and multimodal support."
 version: 1.0.0
 homepage: https://github.com/jamalihassan0307/ai_chat_plus
 repository: https://github.com/jamalihassan0307/ai_chat_plus
@@ -11,11 +11,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # AI Model Integration
+  dart_openai: ^5.0.0  # For OpenAI GPT integration
+  google_generative_ai: ^0.2.0  # For Google Gemini integration
+  http: ^1.2.0  # For making HTTP requests (Claude AI and custom implementations)
+  json_annotation: ^4.8.1
+
+  # State Management
+  provider: ^6.1.1
+
+  # Data Models & Serialization
+  freezed_annotation: ^2.4.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.8
+  json_serializable: ^6.7.1
+  freezed: ^2.4.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
