--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,17 +12,17 @@ dependencies:
   flutter:
     sdk: flutter
   # AI Model Integration
-  dart_openai: ^5.0.0  # For OpenAI GPT integration
-  google_generative_ai: ^0.2.0  # For Google Gemini integration
-  http: ^1.2.0  # For making HTTP requests (Claude AI and custom implementations)
-  json_annotation: ^4.8.1
+  dart_openai: ^5.1.0
+  google_generative_ai: ^0.4.6
+  http: ^1.3.0
+  json_annotation: ^4.9.0
 
   # State Management
-  provider: ^6.1.1
+  provider: ^6.1.4
 
   # Data Models & Serialization
-  freezed_annotation: ^2.4.1
-  equatable: ^2.0.5
+  freezed_annotation: ^2.4.1  # Keeping at 2.4.1 for SDK compatibility
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -30,7 +30,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
-  freezed: ^2.4.7
+  freezed: ^2.4.7  # Keeping at 2.4.7 for SDK compatibility
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
