--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/jamalihassan0307/ai_chat_plus
 repository: https://github.com/jamalihassan0307/ai_chat_plus
 
 environment:
-  sdk: ^3.5.3
+  sdk: ">=3.0.0 <4.0.0"  # Relaxed SDK constraint
   flutter: ">=1.17.0"
 
 dependencies:
@@ -21,7 +21,7 @@ dependencies:
   provider: ^6.1.4
 
   # Data Models & Serialization
-  freezed_annotation: ^2.4.1  # Keeping at 2.4.1 for SDK compatibility
+  freezed_annotation: ^2.4.1
   equatable: ^2.0.7
 
 dev_dependencies:
@@ -30,7 +30,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
-  freezed: ^2.4.7  # Keeping at 2.4.7 for SDK compatibility
+  freezed: ^2.4.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
