--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
   # AI Model Integration
   dart_openai: ^5.1.0
   google_generative_ai: ^0.4.6
   http: ^1.3.0
   json_annotation: ^4.9.0
+  universal_io: ^2.2.2  # Platform-agnostic IO operations
+  web_socket_channel: ^2.4.0  # For web socket support
 
   # State Management
   provider: ^6.1.4
@@ -37,6 +41,22 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  plugin:
+    platforms:
+      android:
+        package: com.example.ai_chat_plus
+        pluginClass: AIChatPlusPlugin
+      ios:
+        pluginClass: AIChatPlusPlugin
+      web:
+        pluginClass: AIChatPlusWeb
+        fileName: ai_chat_plus_web.dart
+      windows:
+        pluginClass: AIChatPlusPlugin
+      macos:
+        pluginClass: AIChatPlusPlugin
+      linux:
+        pluginClass: AIChatPlusPlugin
 
   # To add assets to your package, add an assets section, like this:
   # assets:
