Refactor flutter section in pubspec.yaml for clarity
This commit comments out the flutter plugin configuration in pubspec.yaml, improving readability and organization. The structure remains intact for potential future use, while ensuring the file is cleaner and easier to navigate.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,17 +40,17 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
-flutter:
-  plugin:
-    platforms:
-      android:
-        package: com.example.ai_chat_plus
-        pluginClass: AIChatPlusPlugin
-      ios:
-        pluginClass: AIChatPlusPlugin
-      web:
-        pluginClass: AIChatPlusWeb
-        fileName: ai_chat_plus_web.dart
+# flutter:
+#   plugin:
+#     platforms:
+#       android:
+#         package: com.example.ai_chat_plus
+#         pluginClass: AIChatPlusPlugin
+#       ios:
+#         pluginClass: AIChatPlusPlugin
+#       web:
+#         pluginClass: AIChatPlusWeb
+#         fileName: ai_chat_plus_web.dart
      
 
   # To add assets to your package, add an assets section, like this:
