--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ai_chat_plus
-description: "A Flutter package that provides AI chat functionality with enhanced features including OpenAI, Google Gemini, and Claude AI integrations, voice recognition, and multimodal support."
-version: 1.1.4
+description: "🌟 A cutting-edge Flutter chat experience with seamless AI integration. Features real-time interactions, and intelligent responses powered by OpenAI, Gemini, and Claude. Crafted with precision by Jamalihassan0307."
+version: 1.1.5
 homepage: https://github.com/jamalihassan0307/ai_chat_plus
 repository: https://github.com/jamalihassan0307/ai_chat_plus
 
