Update pubspec.yaml to refine project description for ai_chat_plus, removing unnecessary emoji for a cleaner presentation.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ai_chat_plus
-description: "🌟 A cutting-edge Flutter chat experience with seamless AI integration. Features real-time interactions, and intelligent responses powered by OpenAI, Gemini, and Claude. Crafted with precision by Jamalihassan0307."
+description: "A cutting-edge Flutter chat experience with seamless AI integration. Features real-time interactions, and intelligent responses powered by OpenAI, Gemini, and Claude. Crafted with precision by Jamalihassan0307."
 version: 1.1.6
 homepage: https://github.com/jamalihassan0307/ai_chat_plus
 repository: https://github.com/jamalihassan0307/ai_chat_plus
