--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,13 +19,13 @@ dependencies:
   http: ^1.3.0
   json_annotation: ^4.9.0
   universal_io: ^2.2.2  # Platform-agnostic IO operations
-  web_socket_channel: ^2.4.0  # Keeping at 2.4.0 for compatibility
+  web_socket_channel: ^3.0.0  # Updated to latest version
 
   # State Management
   provider: ^6.1.4
 
   # Data Models & Serialization
-  freezed_annotation: ^2.4.1  # Keeping at 2.4.1 for SDK compatibility
+  freezed_annotation: ^2.4.4  # Updated to be compatible with freezed
   equatable: ^2.0.7
 
 dev_dependencies:
@@ -34,7 +34,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
-  freezed: ^2.4.7  # Keeping at 2.4.7 for SDK compatibility
+  freezed: ^2.4.7  # Keeping this version to match freezed_annotation
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
